debugged crawler